--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 .calculator{
     width: 280px;
     height: 670px;
-    background-color: #38313a;
+    background-color: limegreen;
     border-radius: 10px;
     margin: 0 auto;
     margin-top: 100px;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(64, 61, 61, 0.2);
     padding: 20px;
 }
 
@@ -96,40 +96,9 @@ button:active{
 
 }
 
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-        background-color: #38313a;
-    }
- 
-    50% {
-        background-position: 100% 50%;
-        background-color: rgb(176, 176, 176);
-    }
- 
-    100% {
-        background-position: 0% 50%;
-        background-color: #38313a;
-    }
-}
-
-@keyframes h1 {
-    0% {
-    transform: translateX(-100%);
-    }
-    100% {transform: translateX(0%);
-    }
 
 
-}
 
-h1 {
-    color:#fff;
-    animation-name: h1;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 400;
-}
+
+
+
